<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Price Calc</string>
    <string name="add_item">Add Item</string>
    <string name="item_info">Item Info</string>
    <string name="note1" tools:keep="@string/note1">Start adding items to the list.</string>
    <string name="totalCost_zeroString">$0.00</string>
    <string name="item_is_tax_deductible">Item Is Taxable</string>

    <!--
    Item name values for easier and more accurate referencing
    !-->
    <string name="taxDeductible_Yes" tools:keep="@string/taxDeductible_Yes">Yes</string> <!-- If item is tax deductible !-->
    <string name="taxDeductible_No" tools:keep="@string/taxDeductible_No">No</string>
    <string name="addItem_taxDeductibleInfo">If checked, item tax will automatically be applied to the final price of the item. You can change the tax rate in Settings.</string>
    <string name="itemNameEditText_Hint">Name of the product (Example: Cup)</string>
    <string name="AddItem_confirmButtonText" tools:keep="@string/AddItem_confirmButtonText">Add Item</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="nullVal">null</string>
    <string name="quantity_minValue">1</string>
    <string name="discard">Discard</string>
    <string name="add_a_new_item">Add a new item</string>
    <string name="appversion_placeholder">AppVersion</string>

    <string-array name="theme_settings">\
        <item>Use system theme</item>
        <item>Light mode</item>
        <item>Dark mode</item>
    </string-array>
    <string-array name="theme_settings_val">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="noItemsCard_Title" tools:keep="@string/noItemsCard_Title">Nothing here yet…</string>
    <string name="noItemsCard_Message" tools:keep="@string/noItemsCard_Message">Press the + button to add an item!</string>
    <string name="nothing_here_yet">Nothing here yet…</string>
    <string name="press_the_plus_button_to_add_an_item">Press the + button to add an item!</string>
    <string name="refresh_actionButton">Refresh</string>
    <string name="settings_actionButton">App Settings</string>
    <string name="clearList_ActionButton">Clear List</string>

    <string name="error_RequiredField">This is a required field.</string>
    <string name="tip_calculator">Tip Calculator</string>
    <string name="percentage_symbol">%</string>
    <string name="tip_percentage">Tip Percentage</string>
    <string name="bill_cost">Bill Cost (Before Tax)</string>
    <string name="enter_bill_cost">Enter Bill Cost (Before Tax)</string>
    <string name="dollar_symbol">$</string>
    <string name="about">About</string>
    <string name="tools">Tools</string>
    <string name="add_new_entry">Add New Entry</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="changelog">Changelog</string>
    <string name="current_version">Current version</string>
    <string name="not_interested">Not interested</string>
    <string name="ok">OK</string>
    <string name="new_version_available_header">A new version of PriceCalc is available.</string>
    <string name="latest_version">You have the latest version of the app.</string>
    <string name="new_version">New version</string>
    <string name="file">File</string>
    <string name="open_list">Open List</string>
    <string name="save_list">Save List</string>
    <string name="current_version_string_placeholder">current_version_string</string>
    <string name="release_notes">Release notes</string>
    <string name="update_options_question">What would you like to do?</string>
    <string name="update_now">Update now</string>
    <string name="update_later">Maybe later</string>
    <string name="update_warning">Please do not exit the app at any point during this process.</string>
    <string name="changelog_string_placeholder">changelog_string</string>
    <string name="new_version_string_placeholder">new_version_string</string>
    <string name="updater_status_checking_for_updates">Checking for updates...</string>
    <string name="export_to_csv">Export to CSV</string>
    <string name="share_list">Share</string>
    <string name="export_list">Export List</string>
</resources>